<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_1">
    <LinearLayout
        style="@style/FirebaseUI.WrapperStyle"
        android:orientation="vertical">
        <!--
            Since the TextInputLayouts change size based on whether or not an error
            is showing we use a relative layout to position them absolutely
        -->
        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:id="@+id/new_account_creation"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/app_logo_image"
            android:src="@drawable/cargar_logo_1"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:paddingTop="24dp"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="40dp"
                android:contentDescription="@string/email_icon"
                android:src="@drawable/email_other_icon"/>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/email_layout"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:theme="@style/FirebaseUI.Text.TextInputLayout"
                app:hintTextAppearance="@style/FirebaseUI.Text.HintText"
                app:errorTextAppearance="@style/FirebaseUI.Text.ErrorText"
                android:layout_width="match_parent"
                android:textColorHint="#AAFFFFFF"
                android:layout_height="wrap_content">

                <EditText
                    style="@style/FirebaseUI.EditText"
                    android:id="@+id/email"
                    android:hint="@string/email_hint"
                    android:inputType="textEmailAddress"
                    />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:paddingTop="24dp"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="40dp"
                android:contentDescription="@string/password_icon"
                android:src="@drawable/password_icon"/>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/password_layout"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:theme="@style/FirebaseUI.Text.TextInputLayout"
                app:hintTextAppearance="@style/FirebaseUI.Text.HintText"
                app:errorTextAppearance="@style/FirebaseUI.Text.ErrorText"
                android:layout_width="match_parent"
                android:textColorHint="#AAFFFFFF"
                app:passwordToggleEnabled="true"
                app:passwordToggleDrawable="@drawable/eye_icon"
                app:passwordToggleTint="#FFFFFF"
                android:layout_height="wrap_content">

                <EditText
                    style="@style/FirebaseUI.EditText.PasswordField"
                    android:id="@+id/password"
                    android:hint="@string/password_hint"
                    />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:paddingTop="24dp"
            >
            <TextView
                android:id="@+id/trouble_signing_in"
                android:text="@string/trouble_signing_in"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingTop="8dp"
                android:textStyle="bold"
                style="@style/FirebaseUI.Text.Link"
                />
            <Button
                style="@style/FirebaseUI.Button"
                android:text="@string/next"
                android:id="@+id/button_done"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>